fix api search & public course & courseCategory